<resources>
    <string name="app_name" translatable="false">Randomizer</string>

    <string name="string_generate">Generate</string>
    <string name="string_clear_history">Clear History</string>

    <!-- MainActivity -->

    <string name="string_list">List</string>
    <string name="string_letter">Letter</string>
    <string name="string_number">Number</string>
    <string name="string_diceroll">Dice Roll</string>
    <string name="string_color">Color</string>
    <string name="string_coinflip">Coin Flip</string>
    <string name="string_image">Image</string>
    <string name="string_password">Password</string>
    <string name="string_card">Card</string>
    <string name="string_time">Time</string>
    <string name="string_month">Month</string>
    <string name="string_country">Country</string>
    <string name="string_rps">RPS</string>
    <string name="string_ymn">Yes/No</string>
    
    <!-- LetterFragment -->

    <string-array name="string_array_letter">
        <item>All</item>
        <item>Vowels</item>
        <item>Consonants</item>
    </string-array>

    <string name="string_vowels">AEIOU</string>
    <string name="string_consonants">BCDFGHJKLMNPQRSTVWXYZ</string>

    <!-- NumberActivity -->

    <string name="string_number_minimum">Minimum</string>
    <string name="string_number_maximum">Maximum</string>

    <string-array name="string_array_number">
        <item>All</item>
        <item>Even Numbers</item>
        <item>Odd Numbers</item>
    </string-array>

    <!-- MonthActivity -->

    <string-array name="string_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- CountryActivity -->

    <string-array name="string_countries_spinner">
        <item>All</item>
        <item>Africa</item>
        <item>Asia</item>
        <item>Central America</item>
        <item>Eastern Europe</item>
        <item>European Union</item>
        <item>Middle East</item>
        <item>Oceania</item>
        <item>North America</item>
        <item>South America</item>
        <item>The Caribbean</item>
    </string-array>

    <!-- CardActivity -->

    <string name="string_shuffle_deck">Shuffle Deck</string>

    <!-- CoinActivity -->

    <string name="string_coin">Coin</string>
    <string name="string_tap_for_random_flips">Tap the Coin for Random Flips</string>
    <string-array name="string_heads_or_tails">
        <item>Heads</item>
        <item>Tails</item>
    </string-array>

    <!-- ListActivity -->

    <string name="string_name">Name</string>
    <string name="string_create_list">Create List</string>

    <string name="string_list_day_of_week">Day of week</string>
    <string-array name="string_list_day_of_week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!-- CustomListActivity -->

    <string name="string_item">Item</string>
    <string name="string_add_to_list">Add to List</string>
    <string name="string_long_tap_to_delete">Long tap to delete</string>

    <!-- DiceRollActivity -->

    <string name="string_roll_dice">Roll Dice</string>

    <!-- YmnActivity -->

    <string-array name="string_ymn_answers">
        <item>Yes</item>
        <item>Maybe</item>
        <item>No</item>
    </string-array>

    <string name="string_ask_question">Ask Question (Optional)</string>

    <!-- PasswordActivity -->

    <string name="string_length_of_password">Length of password</string>
    <string name="string_custom_set">Custom set</string>

    <string-array name="string_password_spinner">
        <item>Alphanumeric</item>
        <item>Alphanumeric with Characters</item>
        <item>Numeric Only</item>
        <item>Letters Only</item>
    </string-array>

    <!-- TimeActivity -->
    <string name="string_set_alarm">Set Alarm</string>

    <!-- RpsActivity -->
    <string name="string_rps_you">You</string>
    <string name="string_rps_computer">Computer</string>
    <string name="string_rps_clear_score">Clear Score</string>
    <string name="string_rps_change">Change</string>
    <string name="string_rps_win">Win</string>
    <string name="string_rps_draw">Draw</string>
    <string name="string_rps_lose">Lose</string>
    
</resources>
