<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/listButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_list"
            android:onClick="openActivity" />

        <Button
            android:id="@+id/numberButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_number"
            android:onClick="openActivity" />

        <Button
            android:id="@+id/colorButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_color"
            android:onClick="openActivity" />
        <Button
            android:id="@+id/imageButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_image"
            android:onClick="openActivity"/>

        <Button
            android:id="@+id/cardButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_card"
            android:onClick="openActivity"/>

        <Button
            android:id="@+id/monthButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_month"
            android:onClick="openActivity"/>

        <Button
            android:id="@+id/rpsButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_rps"
            android:onClick="openActivity"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/letterButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_letter"
            android:onClick="openActivity" />

        <Button
            android:id="@+id/dicerollButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_diceroll"
            android:onClick="openActivity"/>

        <Button
            android:id="@+id/coinflipButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_coinflip"
            android:onClick="openActivity"/>

        <Button
            android:id="@+id/passwordButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_password"
            android:onClick="openActivity"/>

        <Button
            android:id="@+id/timeButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_time"
            android:onClick="openActivity"/>

        <Button
            android:id="@+id/countryButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_country"
            android:onClick="openActivity"/>

        <Button
            android:id="@+id/ymnButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_ymn"
            android:onClick="openActivity"/>

    </LinearLayout>
</LinearLayout>
